# Decebalus

./: README.md  decebalusSetUp.sh
.github/workflows/: rust.yml
decebalus-backend/: .gitignore  Cargo.toml  README.md
decebalus-backend/data/: decebalus.db
decebalus-backend/migrations/: 20240101000001_initial_schema.sql  20240101000002_hosts_add_columns.sql
decebalus-backend/src/: lib.rs  main.rs  state.rs
decebalus-backend/src/api/: config.rs  display.rs  hosts.rs  jobs.rs  logs.rs  mod.rs  websocket.rs
decebalus-backend/src/db/: db_repository.rs  inmemory_repository.rs  mod.rs  repository.rs  repository_trait.rs
decebalus-backend/src/models/: config.rs  create_job_request.rs  display.rs  host.rs  job.rs  jobpriority.rs  log.rs  mod.rs  port.rs  service.rs  status.rs  vulnerability.rs
decebalus-backend/src/services/: job_executor.rs  mod.rs  port_scanner.rs  scanner.rs
decebalus-backend/src/services/attacks/: file_steal.rs  ftp_brute.rs  mod.rs  ssh_brute.rs
decebalus-backend/tests/: job_executor_tests.rs
decebalus-frontend/: README.md  index.html  package.json  vite.config.ts
decebalus-frontend/src/: App.svelte  App.svelte2  app.css
decebalus-frontend/src/lib/: api.ts  utils.ts
decebalus-frontend/src/lib/components/: Navbar.svelte
decebalus-frontend/src/lib/pages/: Attacks.svelte  Dashboard.svelte  Logs.svelte  Plugins.svelte  Reconnaissance.svelte  Settings.svelte
decebalus-frontend/src/lib/stores/: websocket.ts  websocketStore.ts
