[package]
name = "decebalus-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
axum = {version = "0.8.6", features=["ws"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.2", features = ["v4"] }
tokio-tungstenite = "0.28.0"
hyper = "1.7.0"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
ipnetwork = "0.21.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
dotenvy = "0.15"